# OSM_bulk_upload

./: README.md  pyproject.toml
src/osm_bulk_upload/: bulk_upload.py
src/osm_bulk_upload/graph/: graph.py  traversal.py
tests/Functional/: test_main.py
